crates/sakka-test/tests/trybuild/optional_collection_missing_attr.rs
use sakka::{Decode, Encode};

#[derive(Debug, PartialEq, Encode, Decode)]
struct OptionalCollectionMissingAttr {
    #[sakka(optional(bool))]
    data: Option<Vec<u8>>,
}

fn main() {}
